syntax = "proto3";

import "google/protobuf/timestamp.proto";

package echo;

service EchoService {
  rpc EchoOnce(EchoRequest) returns (EchoResponse);
  rpc EchoStream(EchoRequest) returns (stream EchoResponse);
}

message EchoRequest {
  string message = 1;
  bool shouldThrow = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message EchoResponse {
  string message = 1;
  google.protobuf.Timestamp timestamp = 2;
}
